version 1.7.3, in progress
- Make the rcond function available for asymmetric matrices
- Enable the $yhat accessor for fitted values in equation
  systems
- Add Italian function help to Windows build
- Weekly to monthly data compaction: respect the user's
  choice of compaction method
- Fix for 64-bit platforms: don't use "long" as the C
  counterpart of Fortran 77 "INTEGER"
- Add trimr matrix function (as in Gauss)

2/25/2008 version 1.7.2
- list-creation: add "dataset" option to use all currently
  available data series
- Fix bug in recording result of TSLS heteroskedasticity test
- Add sscanf command (a subset of C sscanf functionality)
- Add shell capture for strings via $(shellcommand)
- Paths stuff: add (non-configurable) "dotdir" to hold per-user
  automatically-created files
- Fix bugs 1861010, 1868859, 1869271, 1870459, 1870973,
  1871110, 1871135, 1873625, 1874601, 1881849, 1897648
- Rationalize frequency plot dialog
- Add Help item to forecast dialog
- Fixes for matrix "dot operations"
- Fix breakage in graph color selector
- Fixes for ODS spreadsheet importer
- Document the --auto option for the "omit" command, and add
  a GUI handle for it
- MS Windows and OS X packages: update to gnuplot 4.3 (CVS)
- Graphing internals: use UTF-8 for internationalized strings
- Models having an exact fit: block various invalid tests
- det() function: fix for singular matrices
- GUI script editor enhancements
- Allow drag of database from databases-on-server window
  to local native databases window; also function packages
  from server to local function package window
- Add basic support for the DF-GLS test via a new --gls 
  option to the adf command
- Add selifc and selifr matrix functions
- Generalize several functions to accept matrix as well as
  series argument, e.g. quantile, diff, cum, resample
- Add new accessors for TSLS test results: $hausman and
  $sargan
- Many small improvements to the GUI
- Add systematic documentation for the functions available